@@ -4,3 +4,15 @@
 Java version: 
 
 <h1>Steps to setup</h1> 
+
+To get JavaFX working remember to put the VM commands in
+VM arguments:
+
+Windows: --module-path "\path\to\javafx-sdk-15.0.1\lib" --add-modules javafx.controls,javafx.fxml
+
+Linux/Mac: --module-path /path/to/javafx-sdk-15.0.1/lib --add-modules javafx.controls,javafx.fxml
+
+If you don't currently have JavaFX installed then follow this youtube tutorial
+https://www.youtube.com/watch?v=9XJicRt_FaI
+
+If your using GitHub desktop, then clone the repo
